chore: fix onboarding z-index was too high / preview height on safari

--- a/dashboard/src/scss/components/onboarding/_general.scss
+++ b/dashboard/src/scss/components/onboarding/_general.scss
@@ -11,7 +11,7 @@
   left: 0;
   right: 0;
   background-color: #F1F1F1;
-  z-index: 100000000;
+  z-index: 100000;
   overflow: auto;
 
   .content {
